<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:divider="@color/black"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/llRegister"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="30dp">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/white"
                android:backgroundTint="@color/primary_color"
                android:contentDescription="@string/register_title"
                android:src="@drawable/ic_round_arrow_back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/register_title"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="30sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRegister"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/llTopBar"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/llRegisterBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/llTopBar"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="2"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/etDni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/patient_login_username"
                    android:inputType="number"
                    android:maxLength="8"
                    />

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_text"
                    android:inputType="text"
                    />

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_login"
                    android:inputType="textPassword"
                    />

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/etRepeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_register"
                    android:inputType="textPassword"
                    />

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_text"
                    android:inputType="text"
                    />

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/etSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname_text"
                    android:inputType="text"
                    />

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_text"
                    android:inputType="number"
                    android:maxLength="9"
                    />

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/etSfees"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sfees_text"
                    android:inputType="number"
                    android:maxLength="6"
                    />


            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cornerRadius="0dp"
                android:backgroundTint="@color/primary_color"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:text="@string/register_button_text"
                app:layout_constraintTop_toBottomOf="@+id/llRegister"
                app:layout_constraintBottom_toBottomOf="parent">
            </com.google.android.material.button.MaterialButton>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>