<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llRegister"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister">

            <LinearLayout
                android:id="@+id/llRegisterBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/llTopBar"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="2"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/etMedicine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/medicine_name"
                    android:inputType="number"
                    android:maxLength="8"
                    />

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/etWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/medicine_weight"
                    android:inputType="text"
                    />

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/etQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/medicine_quantity"
                    android:inputType="textPassword"
                    />

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/etHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/medicine_hours"
                    android:inputType="textPassword"
                    />

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/etDays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/medicine_days"
                    android:inputType="text"
                    />

            </LinearLayout>


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:insetTop="0dp" android:insetBottom="0dp" android:insetRight="0dp" android:insetLeft="0dp"
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/primary_color"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:text="@string/register_button_prescription"
            app:layout_constraintBottom_toBottomOf="parent">
        </com.google.android.material.button.MaterialButton>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>