<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clFragmentRegisterDoctor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingVertical="100dp"
        android:paddingHorizontal="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminate="true"
        android:translationZ="1dp"
        android:background="#80000000"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">



        <LinearLayout
            android:id="@+id/llTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:divider="@color/black"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/llRegister"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="30dp">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/white"
                android:backgroundTint="@color/primary_color"
                android:contentDescription="@string/register_title"
                android:src="@drawable/ic_round_arrow_back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/register_title"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="30sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRegister"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/llTopBar"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/llRegisterBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                    app:layout_constraintTop_toBottomOf="@+id/llTopBar">


                    <EditText
                        android:id="@+id/etDni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/patient_login_username"
                        android:inputType="number"
                        android:maxLength="8" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/email_text"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/password_login"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/etRepeatPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/password_register"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/name_text"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/etSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/surname_text"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/phone_text"
                        android:inputType="number"
                        android:maxLength="9" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content">
                        <Spinner
                            android:id="@+id/spnSex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:spinnerMode="dropdown"
                            android:prompt="@string/sex_text"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <EditText
                        android:id="@+id/etBirthDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/birthDate_text"
                        android:textIsSelectable="false"
                        android:inputType="none"
                        android:focusableInTouchMode="false"
                        tools:ignore="TextFields" />

                    <EditText
                        android:id="@+id/etBloodType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="Tipo de sangre"
                        android:inputType="text"
                        android:maxLength="3" />

                    <EditText
                        android:id="@+id/etChronicleDiseases"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="Enfermedades crónicas"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/etAllergies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:hint="@string/allergies_text"
                        android:inputType="text" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:insetRight="0dp"
            android:insetLeft="0dp"
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="120dp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/primary_color"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:text="@string/register_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </com.google.android.material.button.MaterialButton>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>