<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:divider="@color/black"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/llRegister"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="30dp">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/white"
                android:backgroundTint="@color/primary_color"
                android:contentDescription="@string/register_title"
                android:src="@drawable/ic_round_arrow_back" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/register_title"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="30sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRegister"
            android:layout_marginVertical="40dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/llTopBar"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister">

            <LinearLayout
                android:id="@+id/llRegisterBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/llTopBar"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                android:layout_marginHorizontal="30dp"
                android:layout_weight="2"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/patient_login_username"
                    />

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_login"
                    />

                <EditText
                    android:layout_marginTop="20dp"
                    android:id="@+id/etRepeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_register"
                    />


            </LinearLayout>


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:insetTop="0dp" android:insetBottom="0dp" android:insetRight="0dp" android:insetLeft="0dp"
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/primary_color"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:text="@string/register_button_text"
            app:layout_constraintBottom_toBottomOf="parent">
        </com.google.android.material.button.MaterialButton>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>